# tm-slack-reporter

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  init.sh
src/tm_slack_reporter/: crew.py  main.py
src/tm_slack_reporter/config/: agents.yaml  tasks.yaml
src/tm_slack_reporter/tools/: slack_tool.py
